Dressing up the index with a bit of semantic markup.

--- a/index.html
+++ b/index.html
@@ -6,18 +6,50 @@
     <title>Andrew Barrows - Professional Resume</title>
   </head>
   <body>
-    <h1>Andrew Barrows Resume</h1>
-
-<p>
-  This repo serves as a single source of truth for my resume and related
-  information.  There are a few main benefits I see in keeping it centralized here
-  within github.
-</p>
-
-<ol>
-  <li>Using Markdown primarily keep the contents of my resume as simple as possible.</li>
-  <li>Version controlled edits ensures I can retrieve old history and avoid the <em>resume_20240104, resume_20240106, etc.</em> in a cloud folder.</li>
-  <li>Automation abilities like generating different formats and later on a template so it looks a little more polished than pure markdown.</li>
-  <li>Linting, spell checking, formatting, indentation, etc.</li>
-</ol>
+    <main>
+      <header>
+        <h1>Andrew Barrows</h1>
+        <h2>Software Engineering Manager</h2>
+      </header>
+      <section>
+        <h3>Description</h3>
+        <p>
+          This repo serves as a single source of truth for my resume and related
+          information. There are a few main benefits I see in keeping it
+          centralized here within github.
+        </p>
+      </section>
+      <section>
+        <ol>
+          <li>
+            Using Markdown primarily keep the contents of my resume as simple as
+            possible.
+          </li>
+          <li>
+            Version controlled edits ensures I can retrieve old history and
+            avoid the <em>resume_20240104, resume_20240106, etc.</em> in a cloud
+            folder.
+          </li>
+          <li>
+            Automation abilities like generating different formats and later on
+            a template so it looks a little more polished than pure markdown.
+          </li>
+          <li>Linting, spell checking, formatting, indentation, etc.</li>
+        </ol>
+      </section>
+      <aside>
+        <h3>Links</h3>
+        <ul>
+          <li>
+            <a href="/positions/formats/index.pdf">Resume (PDF)</a>
+          </li>
+          <li>
+            <a href="/positions/formats/index.md">Resume (Markdown)</a>
+          </li>
+          <li>
+            <a href="/positions/formats/index.json">Resume (JSON)</a>
+          </li>
+        </ul>
+    </main>
+  </body>
 </html>
