Adding scaffold from the hyde theme.

--- a/about.html
+++ b/about.html
@@ -1,3 +1,9 @@
+---
+layout: page
+title: About
+permalink: about
+---
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -41,13 +47,13 @@
         <h3>Links</h3>
         <ul>
           <li>
-            <a href="/positions/formats/index.pdf">Resume (PDF)</a>
+            <a href="/releases/download/latest/document.pdf">Resume (PDF)</a>
           </li>
           <li>
-            <a href="/positions/formats/index.md">Resume (Markdown)</a>
+            <a href="/releases/download/latest/document.pdf">Resume (Markdown)</a>
           </li>
           <li>
-            <a href="/positions/formats/index.json">Resume (JSON)</a>
+            <a href="/formats/index.json">Resume (JSON)</a>
           </li>
         </ul>
     </main>
